src/app.css
/* ... */
label:has(> input[type='checkbox'], > input[type='radio']) {
	display: block;
	line-height: 1.2em;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

input + .help {
	display: block;
	margin-top: 0.75rem;
}

fieldset {
	border: solid 1px var(--color-gray-300);
	border-radius: 8px;
	margin-inline: 0;
	min-width: 0;
	padding: 12px 16px;
}

/* Spreadsheet style inputs */
.spreadsheet {
	width: auto;
}

.spreadsheet thead {
	text-transform: none;
}

.spreadsheet th {
	padding: 0.25rem 0.5rem;
}

.spreadsheet td {
	padding: 0;
}

.spreadsheet input {
	border: none;
	border-radius: 0;
	line-height: 1.5;
	padding: 0.25rem 0.5rem;
}

.spreadsheet button {
	--padding-x: 0;
	--padding-y: 0;

	margin: 0.25rem;
	vertical-align: middle;
	width: 1.5rem;
}

/* SVG icons */
.icon-20 {
	--size: 20px;

	height: var(--size);
	width: var(--size);
}

.icon-24 {
	--size: 24px;

	height: var(--size);
	width: var(--size);
}

.icon-32 {
	--size: 32px;

	height: var(--size);
	width: var(--size);
}

/* Avatars */
.avatar {
	border-radius: 50%;
	display: inline-block;
	font-size: var(--font-size);
	height: calc(2 * var(--radius));
	line-height: 1;
	padding: calc(var(--radius) - var(--font-size) / 2) 0;
	text-align: center;
	width: calc(2 * var(--radius));
}

.avatar.avatar-s {
	--radius: 1rem;
	--font-size: 0.75rem;
}

.avatar.avatar-m {
	--radius: 1.5rem;
	--font-size: 1rem;
}

/* Logos of organizations */
.logo {
	height: 30px;
	width: auto;
}

/* Container detail page content */
.detail-page-content {
	background-color: white;
	border: 1px solid var(--color-gray-200);
	border-radius: 8px;
	box-shadow: var(--shadow-lg);
	display: flex;
	flex: 1 1;
	flex-direction: column;
	height: calc(100% - 2rem);
	margin: 1rem 1rem 1rem 0;
}

.content-header {
	padding: 1.5rem 1.5rem 0;
}

.content-header a {
	float: right;
}

.content-details {
	--mask-height: 1.5rem;

	flex-grow: 1;
	padding: 1.5rem;
}

.content-footer {
	padding: 0 1.5rem 1.5rem;
}

.content-actions {
	display: flex;
	flex-wrap: wrap;
	gap: 0.5rem;
	margin-top: 1.5rem;
}

.content-actions .delete {
	color: var(--color-red-500);
	margin-left: auto;
}

.icons {
	display: flex;
	flex-shrink: 0;
	gap: 1rem;
	margin-left: auto;
}

.icons-element {
	--padding-x: 0;
	--padding-y: 0;

	border: none;
}

.icons-element:hover {
	--button-hover-background: transparent;

	color: var(--color-gray-500);
}

.details {
	color: var(--color-gray-500);
	display: flex;
	flex-direction: column;
	gap: 1.5rem;
}

.details-tab {
	display: flex;
	flex-direction: column;
	gap: 1.5rem;
}

.details-title {
	color: var(--color-gray-800);
	display: block;
	font-size: 1.125rem;
	font-weight: 600;
}

.details-title > a {
	float: right;
}

.details h3 {
	color: var(--color-gray-800);
	font-size: inherit;
	font-weight: 500;
	margin-bottom: 0.875rem;
}

.meta {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	gap: 48px;
}

.meta-key {
	flex: 0 0 140px;
}

.meta-value {
	flex: 1;
}

.meta-value--category li {
	display: inline-block;
}

.meta-value svg {
	display: inline;
	vertical-align: top;
}

/* Markdown editor and viewer */
.markdown-body ol,
.milkdown .editor ol,
.markdown-body ul:not(.contains-task-list) {
	list-style: revert;
	padding-inline-start: 1.5rem;
}

.markdown-body p,
.milkdown .editor > p,
.milkdown .editor > ul,
.milkdown .editor > ol {
	margin: 0.875rem 0;
}

.milkdown .editor > *:first-child {
	margin-top: 0;
}

.milkdown .editor > *:last-child {
	margin-bottom: 0;
}

.markdown-body a,
.milkdown .editor a {
	text-decoration: underline;
}

/* Fade out overflow effect */
.masked-overflow {
	--mask-image-content: linear-gradient(
		to bottom,
		transparent,
		black var(--mask-height, 2rem),
		black calc(100% - var(--mask-height, 2rem)),
		transparent
	);
	--mask-size-content: 100% 100%;

	mask-image: var(--mask-image-content);
	mask-size: var(--mask-size-content);
	mask-position:
		0 0,
		100% 0;
	mask-repeat: no-repeat, no-repeat;
	overflow-y: auto;
	padding-bottom: var(--mask-height, 2rem);
}

/* Vertical scroll wrapper */
.vertical-scroll-wrapper {
	--mask-height: 0.875rem;

	display: flex;
	flex-direction: column;
	gap: 0.75rem;
	padding: var(--mask-height) 0;
}

/* Badges */
.badge {
	--button-background: var(--color-indigo-050);
	--color: var(--color-indigo-500);

	align-items: center;
	background-color: var(--button-background);
	border-radius: 6px;
	color: var(--color);
	display: inline-flex;
	justify-content: center;
	gap: 0.25rem;
	padding: 0.125rem 0.75rem;
	text-align: center;
}

.badge.badge--large {
	font-size: larger;
	padding: 0.25rem 0.75rem;
}

.badge.badge--red {
	--button-background: var(--color-red-background);
	--color: var(--color-red);
}

.badge.badge--orange {
	--button-background: var(--color-orange-background);
	--color: var(--color-orange);
}

.badge.badge--yellow {
	--button-background: var(--color-yellow-background);
	--color: var(--color-yellow);
}

.badge.badge--green {
	--button-background: var(--color-green-background);
	--color: var(--color-green);
}

.badge > svg {
	height: 1rem;
	width: 1rem;
}

/* Tabs */
.tabs {
	display: flex;
	flex-basis: 100%;
	gap: 1rem;
	justify-content: flex-start;
}

/* Overlay */
.overlay {
	background-color: white;
	box-shadow: var(--shadow-lg);
	display: flex;
	flex-direction: column;
	height: 100vh;
	margin-left: -0.375rem;
	position: relative;
	padding: 0;
	top: calc(var(--nav-height) * -1);
	width: 100%;
	z-index: 3;
}

/* Carousel */
.carousel {
	display: flex;
	flex-direction: row;
	gap: 0.75rem;
	overflow-x: auto;
	padding-bottom: 1rem;
}

.carousel > li {
	flex-shrink: 0;
	width: 19.5rem;
}

/* Utility classes */
.is-hidden {
	display: none;
}

